Update with docker method to run applet and start containers